--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,22 @@
+# Recommend using channel_priority: strict to avoid conflicts
 channels:
   - conda-forge
   - bioconda
   - defaults
-# It's always good to be in the habbit of hardcoding versions, if you can
+# When possible, we recommend hardcoding versions
 dependencies:
 - python=3.11
-- fastqc
+
+# Use the latest version of jupyter
+- jupyter=1.0.0
+- ipykernel=6.28.0
+
+# We're going to be using R in a juypter environment, so setup necessary packages
+- r-base=4.3.3
+- r-irkernel=1.3.2
+
+# Install other packages as necessary, when using conda this is preferable for
+# avoiding dynamic linking issues
+- r-tidyverse=2.0.0
+- r-biocmanager=1.30.22
+- bioconductor-enhancedvolcano=1.20.0
